--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="card">
         <h2>🚀 Подключение</h2>
         <p>Выберите приложение:</p>
-        <a id="happ" class="btn happ">Импорт в hApp</a>
-        <a id="v2ray" class="btn v2ray">Импорт в v2rayTun</a>
+        <a id="happ" class="btn happ">Импорт в Happ</a>
+        <a id="v2ray" class="btn v2ray">Импорт в v2RayTun</a>
         <a id="hiddify" class="btn hiddify">Импорт в Hiddify</a>
     </div>
     <script>
