--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         body { font-family: -apple-system, system-ui, sans-serif; background: #0f172a; color: white; text-align: center; padding: 20px; }
         .card { background: #1e293b; padding: 30px; border-radius: 20px; max-width: 400px; margin: auto; box-shadow: 0 10px 25px rgba(0,0,0,0.3); }
         .btn { display: block; padding: 15px; margin: 15px 0; border-radius: 12px; text-decoration: none; color: white; font-weight: bold; transition: 0.2s; }
-        .happ { background: #ef4444; }
-        .v2ray { background: #3b82f6; }
-        .hiddify { background: #8b5cf6; }
+        .happ { background: #696969; }
+        .v2ray { background: #000000; }
+        .hiddify { background: #000080; }
         .btn:active { transform: scale(0.98); }
     </style>
 </head>
